wip: starting to propagate CSSProperty and getting it into servo

--- a/layout/style/ServoBindings.toml
+++ b/layout/style/ServoBindings.toml
@@ -7,6 +7,7 @@ headers = [
     "nsStyleConsts.h",
     "mozilla/css/Loader.h",
     "mozilla/css/SheetLoadData.h",
+    "mozilla/CSSProperty.h",
     "mozilla/DeclarationBlock.h",
     "mozilla/dom/AnimationEffectBinding.h",
     "mozilla/dom/HTMLSlotElement.h",
@@ -177,6 +178,7 @@ whitelist-types = [
     "mozilla::ComputedTiming",
     "mozilla::ComputedTimingFunction",
     "mozilla::ComputedTimingFunction::BeforeFlag",
+    "mozilla::CSSProperty",
     "mozilla::Matrix4x4Components",
     "mozilla::PreferenceSheet",
     "mozilla::SeenPtrs",
